# nucleo-f429zi

./: Cargo.toml  README.md  gdb.startup  memory.x
src/: main.rs
